clusters/central-tx-atx-777/imdb/imdb/ingress.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: imdb-vs
  namespace: imdb
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/istio-gateway
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: imdb
            port:
              number: 8080
